--- a/App_Autel.Rmd
+++ b/App_Autel.Rmd
@@ -11,10 +11,7 @@ runtime: shiny
 ---
 
 ```{r , include=FALSE}
-
-#install.packages("flexdashboard")
-#install.packages("DT")
-
+  library(rJava)
   library(flexdashboard)
   library(dplyr)
   library(ggplot2)
