--- a/App_Autel.Rmd
+++ b/App_Autel.Rmd
@@ -100,11 +100,11 @@ for (file_name in dir(path = "./Inputs/PDF/",pattern = "^.*Diagnostic.*\\.pdf",f
   
 }
 
-Error_code_list
+
 
 features_df <- cbind(File_Name,Vehicle_make,VIN_number,Error_code_list,Error_text_list)
 features_df <- as.data.frame(features_df)
-features_df <- data.frame(features_df,Test_time)  # Problem here as vector of lists seem to have bigger length.
+#features_df <- data.frame(features_df,Test_time)  # Problem here as vector of lists seem to have bigger length.
 ```
 
 
