--- a/Autel_EDA.Rmd
+++ b/Autel_EDA.Rmd
@@ -79,15 +79,28 @@ out_text_words <- gsub("\n","",out_text_words)
 #Find matches corresponding to error codes & car make
 
 
-error_codes <- as.vector(unique (grep(".....\\-\\d\\d", out_text_words, value=TRUE)))
+error_codes <- as.vector(unique (grep("[A-Z]....\\-\\d\\d", out_text_words, value=TRUE)))
 car_make <- intersect(out_text_words,car_makes)
 #error_textx <- gsub(".*.....\\-\\d\\d | (\r\n|\r|\n).*","",out_text)
-error_texts <- as.vector(unique(strapplyc(out_text, ".....\\-\\d\\d(.*?)(\r\n|\r|\n).*", simplify = c)))
+error_texts <- as.vector(unique(strapplyc(out_text, "[A-Z]....\\-\\d\\d(.*?)(\r\n|\r|\n).*", simplify = c)))
+VIN_number <- as.vector(unique(strapplyc(out_text, "VIN:(.*?)(\r\n|\r|\n).*", simplify = c)))
+VIN_number <- VIN_number[nchar(VIN_number)>2]
 
+test_time_text <- as.vector(unique(strapplyc(out_text, "Test Time: (.*?)(\n).*", simplify = c)))
+test_time_text <- test_time_text[nchar(test_time_text) >2]
+test_time_text <- as.POSIXct(test_time_text,format = "%Y-%M-%M %H:%M:%S")
+test_time_text
 summary_data <- c("YK64 XVX.pdf",list(error_codes),list(error_texts),car_make)
 
-
+#Testing which files are bieng listed and searched
 dir(path = "./Inputs/PDF/",pattern = NULL,full.names=TRUE,recursive=TRUE)
+
+#Testing regex etc
+error_texts <- error_texts[nchar(error_texts)>2]
+error_texts
+out_text
+VIN_number
+test_time_text
 
 
 ```
@@ -105,7 +118,6 @@ Error_text_list <-  list()
 # Feature extraction
 
 i=1
-
 for (file_name in dir(path = "./Inputs/PDF/",pattern = "^.*Diagnostic.*\\.pdf",full.names=TRUE,recursive=TRUE)){
   
 
@@ -120,22 +132,44 @@ for (file_name in dir(path = "./Inputs/PDF/",pattern = "^.*Diagnostic.*\\.pdf",f
   
   #Extract feature from cleansed text
 
-  error_codes <- as.vector(unique (grep(".....\\-\\d\\d", out_text_words, value=TRUE)))
+  error_codes <- as.vector(unique (grep("[A-Z]....\\-\\d\\d", out_text_words, value=TRUE)))
   car_make <- ifelse(length(intersect(out_text_words,car_makes)) == 0,"Not found",intersect(out_text_words,car_makes)) # to avoid zero length error
-  error_texts <- as.vector(unique(strapplyc(out_text, ".....\\-\\d\\d(.*?)(\r\n|\r|\n).*", simplify = c)))
+  error_texts <- as.vector(unique(strapplyc(out_text, "[A-Z]....\\-\\d\\d(.*?)(\r\n|\r|\n).*", simplify = c))) # Assumes 1st char error code is letter
+  error_texts <- ifelse(length(error_texts)==0,"NA",error_texts)
+  error_codes <- ifelse(length(error_codes)==0,"NA",error_codes)
+  
+  error_texts <- error_texts[nchar(error_texts)>2] #Retaining only elements with at least 3 characters
+  VIN_number_text <- as.vector(unique(strapplyc(out_text, "VIN:(.*?)(\r\n|\r|\n).*", simplify = c))) # Regex would need improving to avoid next line
+  VIN_number_text <- VIN_number_text[nchar(VIN_number_text)>2]
+  
+  
+  test_time_text <- as.vector(unique(strapplyc(out_text, "Test Time: (.*?)(\r\n|\r|\n).*", simplify = c)))
+  test_time_text <- test_time_text[nchar(test_time_text) >2]
+  test_time_text <- as.POSIXct(test_time_text,format = "%Y-%M-%M %H:%M:%S")
+
+
   
   
   
   File_Name[i] <- file_name
   Vehicle_make[i] <- car_make
+  VIN_number[i] <- ifelse(length(VIN_number_text) == 0,"NA",VIN_number_text)
+  Test_time[i] <- test_time_text
+  
   Error_code_list[[length(Error_code_list)+1]] <- error_codes
+  Error_text_list[[length(Error_text_list)+1]] <- error_texts
+  All_error_codes <- c(All_error_codes,error_codes)
+  All_error_texts <- c(All_error_texts,error_texts)
   
   
   i <- i+1
   
 }
 
-features_df <- data.frame(cbind(File_Name,Vehicle_make,Error_code_list))
+features_df <- cbind(File_Name,Vehicle_make,VIN_number,Error_code_list,Error_text_list)
+features_df <- as.data.frame(features_df)
+features_df <- data.frame(features_df,Test_time)  # Problem here as vector of lists seem to have bigger length.
+
 
 
 ```
