--- a/App_Autel.Rmd
+++ b/App_Autel.Rmd
@@ -285,7 +285,8 @@ build_query_result_table <- function(input_make_selection,input_error_code_selec
   query_result_table <- query_result_table %>% 
     #mutate(LinkToFile =paste0("<a href = '","Diagnostic Report sn09nxv.pdf","'>","Open file", "</a>"))
     #mutate(linktofile = a("click on me",href="Diagnostic Report sn09nxv.pdf"))
-    mutate(linktofile  = "<a href='http://qualias.co.uk:3838/Autel_App/858100 - Kelvin Scott/Diagnostic Report KS61 WKD.pdf' target='_blank' >MyFile</a>")
+    mutate(linktofile  = "<a href='http://qualias.co.uk:3838/Autel_App/858100 - Kelvin Scott/Diagnostic Report KS61 WKD.pdf' target='_blank' >MyFile</a>") %>% 
+    mutate(ltf2 = a("Click Here to Download Survey",href="/858100 - Kelvin Scott/Diagnostic Report KS61 WKD.pdf",target = _blank))
            
   return(query_result_table)
   
